    grid.collection, push.viewport, pop.viewport, viewport.transform,
    draw.details, convertNative.

10. Down viewports are now recorded on the display list as full-depth
    strict vpPaths even when downViewport() is called with non-strict
    vpPath (which can produce a down viewport of greater depth than
    the depth of the vpPath).


Changes from grid_3.0.0 to grid_3.0.1:
-------------------------------------

1.  Added str() method for "unit.arithmetic"
    Reported by Andreas Leha.


Changes from grid_2.15.0 to grid_3.0.0:
--------------------------------------

1.  Bug fix for showViewport() when the viewport is a
    "vpStack" and one of the components of the stack
    is NOT just a simple viewport (e.g., when one of
    the components of the "vpStack" is a "vpStack").

2.  Bug fix for grid.ls(viewports = TRUE) when listing a
    "vpStack" and one of the components of the stack
    is NOT just a simple viewport (e.g., when one of
    the components of the "vpStack" is a "vpStack").

3.  Added support for "vpPaths" within a "vpStack",
    "vpList", or "vpTree" (i.e., mixing of viewports
    and "vpPaths").

4.  New functions grid.reorder() and reorderGrob() to  
    modify the order in which the children of a gTree 
    are drawn.

5.  Bug fix for grid.ls() to report children of a gTree
    in the correct order.

6.  New makeContext() and makeContent() "hook" functions
    to allow alternative method for creating custom grobs.

7.  Standard behaviour for grobs is now to use upViewport()
    rather than popViewport() on the 'vp' slot.

8.  New grid.force() function to provide access to grobs 
    that are generated only at drawing time (for grobs that 
    use the new makeContent() hook).

9.  New grid.revert() function to revert the effect of 
    grid.force().

10. Implementation of "xaxis", "yaxis", "frame", "cellGrob",
    "roundrect", "beziergrob", "curve", and "functiongrob"
    changed to use makeContext() and makeContent() hooks.
